<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/custom_alert_dialog"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/error"
        android:textSize="@dimen/_15ssp"
        android:fontFamily="@font/gg_ss"
        android:gravity="start"
        android:paddingStart="@dimen/_20sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_gravity="start"
        android:textColor="@color/red"
        android:drawableRight="@drawable/ic_error"
        android:drawablePadding="@dimen/_5sdp"
        android:textDirection="rtl"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/servererror"
        android:id="@+id/massage"
        android:fontFamily="@font/gg_ss"
        android:padding="@dimen/_4sdp"
        android:gravity="right|center"
        android:textSize="@dimen/_12ssp"
        android:background="@color/white"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_22sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="#000"
        android:textDirection="rtl"
        />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:text="@string/ok"
            android:layout_gravity="left"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:id="@+id/btn"
            android:fontFamily="@font/gg_ss"
            android:textSize="@dimen/_12ssp"
            android:paddingStart="@dimen/_1sdp"
            android:paddingEnd="@dimen/_1sdp"
            android:background="@color/white"
            android:textColor="#000"
            />


</LinearLayout>