<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activity.Comments">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="@dimen/_80sdp"
        >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rec"
            android:orientation="vertical"
            tools:ignore="MissingConstraints" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="@dimen/_10sdp"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:id="@+id/ed_add_comment"
        android:inputType="textMultiLine"
        app:fontFamily="@font/gg_ss"
        android:hint="@string/addcomments"
        android:textSize="@dimen/_14ssp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingRight="@dimen/_10sdp"
        android:background="@drawable/custom_edittext_comments"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_comment"
        android:drawableLeft="@drawable/ic_send_comments"
        android:layout_gravity="center|left"
        android:layout_marginLeft="@dimen/_10sdp"
        android:visibility="invisible"
        />
</FrameLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/empty"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/empty_comments"
        android:fontFamily="@font/onumedium"
        android:layout_gravity="center"
        android:gravity="center"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/onumedium"
            android:visibility="gone"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnconnection"
            android:layout_gravity="center"
            android:fontFamily="@font/onumedium"
            android:text="@string/try_agin"
            android:visibility="gone"
            android:gravity="center"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>