<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Activity.Add_Work"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/_50sdp"
        android:scrollbars="none"
        android:paddingBottom="10dp"
        android:clipToPadding="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_4sdp"
                app:cardBackgroundColor="@color/white"
                app:contentPadding="@dimen/_10sdp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:orientation="vertical"
                        >
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_200sdp"
                            android:id="@+id/image"
                            android:scaleType="centerCrop"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_image_name_unfoucs"
                            android:onClick="img_select"
                            tools:ignore="OnClick" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addwork_image_empty"
                        android:textDirection="rtl"
                        android:id="@+id/image_empty"
                        android:fontFamily="@font/gg_ss"
                        android:textSize="@dimen/_12ssp"
                        android:textColor="@color/red1"
                        android:visibility="gone"
                        />

                    <EditText
                        android:layout_width="@dimen/_240sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:id="@+id/ed_img_name"
                        android:inputType="text"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:drawableRight="@drawable/custom_image_name_icon"
                        android:drawablePadding="@dimen/_10sdp"
                        app:fontFamily="@font/gg_ss"
                        android:hint="@string/addwork_name"
                        android:textSize="@dimen/_14ssp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textDirection="rtl"
                        />

                    <EditText
                        android:layout_width="@dimen/_240sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:id="@+id/ed_img_price"
                        android:inputType="number"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:drawableRight="@drawable/custom_image_price_icon"
                        android:drawablePadding="@dimen/_10sdp"
                        app:fontFamily="@font/boutrosmbcinkmmedium"
                        android:hint="@string/addwork_price"
                        android:textSize="@dimen/_14ssp"
                        android:paddingStart="@dimen/_10sdp"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textDirection="rtl"
                        />

                    <EditText
                        android:layout_width="@dimen/_240sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:id="@+id/ed_img_details"
                        android:inputType="textMultiLine"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:drawableRight="@drawable/custom_image_detailes_icon"
                        android:drawablePadding="@dimen/_10sdp"
                        app:fontFamily="@font/gg_ss"
                        android:hint="@string/addwork_detailes"
                        android:textSize="@dimen/_14ssp"
                        android:paddingStart="@dimen/_10sdp"
                        android:maxLines="2"
                        android:paddingEnd="@dimen/_10sdp"
                        android:textDirection="rtl"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        tools:ignore="MissingConstraints">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/black"
                    android:gravity="bottom"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:text="@string/btn_Addwork"
                    android:fontFamily="@font/gg_ss"
                    android:id="@+id/btn_addwork"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    android:layout_gravity="center"
                    android:background="@color/red1"
                    android:foreground="?android:attr/selectableItemBackground"
                    />

            </FrameLayout>


    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>