<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.Fragment.Home">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_60sdp"
            android:id="@+id/home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <ImageView
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:id="@+id/img"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/logo"
                tools:ignore="MissingConstraints" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintRight_toLeftOf="@id/img"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="@font/gg_ss"
                android:gravity="center"
                android:textStyle="bold"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>



        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:id="@+id/cardview_search"
            app:layout_constraintTop_toBottomOf="@id/home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="@dimen/_3sdp"
            app:cardPreventCornerOverlap="true"
            android:layout_gravity="center"
            tools:ignore="MissingConstraints">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/custom_edittext_search"
                android:id="@+id/search"
                android:fontFamily="@font/onumedium"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:hint="@string/search"
                android:textSize="@dimen/_12ssp"
                android:drawableRight="@drawable/ic_search"
                android:drawablePadding="@dimen/_10sdp"
                android:paddingRight="@dimen/_16sdp"
                android:paddingLeft="@dimen/_10sdp"
                android:textAlignment="textStart"
                android:textDirection="rtl"
                />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/img_clear"
                android:src="@drawable/ic_clear"
                android:layoutDirection="ltr"
                android:layout_gravity="center|left"
                android:visibility="invisible"
                android:layout_marginLeft="@dimen/_5sdp"
                />
        </androidx.cardview.widget.CardView>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_search"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_110sdp"
       >
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rec"
            android:orientation="vertical"
            tools:ignore="MissingConstraints" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/empty"
        android:textColor="@color/black"
        android:visibility="gone"
        android:text="@string/empty_work"
        android:fontFamily="@font/onumedium"
        android:layout_gravity="center"
        android:gravity="center"
            />
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
            >
        <TextView
            android:id="@+id/connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/onumedium"
            android:visibility="gone"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnconnection"
            android:layout_gravity="center"
            android:fontFamily="@font/onumedium"
            android:text="@string/try_agin"
            android:visibility="gone"
            android:gravity="center"/>
        </LinearLayout>


<com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:paddingLeft="@dimen/_2sdp"
        android:paddingRight="@dimen/_2sdp"
        android:fitsSystemWindows="true"
        app:srcCompat="@drawable/ic_add_work"/>

</androidx.constraintlayout.widget.ConstraintLayout>